--- a/SourceCode/2023/Nov2023/Basics/Vineeth/Task 11/Veggies and Fruits using flow chat.xaml
+++ b/SourceCode/2023/Nov2023/Basics/Vineeth/Task 11/Veggies and Fruits using flow chat.xaml
@@ -96,7 +96,7 @@
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <av:Point x:Key="ShapeLocation">170.00000000000003,133.6</av:Point>
             <av:Size x:Key="ShapeSize">200,52.8</av:Size>
-            <av:PointCollection x:Key="ConnectorLocation">170.00000000000003,160 140,160 140,103.6 710,103.6 710,220 680,220</av:PointCollection>
+            <av:PointCollection x:Key="ConnectorLocation">170.00000000000003,160 140.00000000000006,160 140.00000000000006,193.6 370,193.6 370,250 340,250</av:PointCollection>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
         <ui:InputDialog Options="{x:Null}" DisplayName="Groceries" sap:VirtualizedContainerService.HintSize="200,52.8" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="Please select any one" OptionsString="Vegitables;Fruits" Title="Please select any one">
@@ -113,9 +113,9 @@
           <FlowStep x:Name="__ReferenceID4">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <av:Point x:Key="ShapeLocation">480.00000000000006,193.6</av:Point>
+                <av:Point x:Key="ShapeLocation">140,223.6</av:Point>
                 <av:Size x:Key="ShapeSize">200,52.8</av:Size>
-                <av:PointCollection x:Key="ConnectorLocation">480.00000000000006,220 262.40000000000003,220 262.40000000000003,276.4</av:PointCollection>
+                <av:PointCollection x:Key="ConnectorLocation">140,250 112.40000000000003,250 112.40000000000003,306.4 262.40000000000003,306.4 262.40000000000003,336.4</av:PointCollection>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
             <ui:LogMessage DisplayName="Input Log Message" sap:VirtualizedContainerService.HintSize="200,52.8" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;Input has stored&quot;]">
@@ -126,12 +126,12 @@
               </sap:WorkflowViewStateService.ViewState>
             </ui:LogMessage>
             <FlowStep.Next>
-              <FlowSwitch x:TypeArguments="x:String" x:Name="__ReferenceID0" DisplayName="Groceries" sap:VirtualizedContainerService.HintSize="70.4,87.2" sap2010:WorkflowViewState.IdRef="FlowSwitch`1_2">
+              <FlowSwitch x:TypeArguments="x:String" x:Name="__ReferenceID0" DisplayName="Groceries" Expression="[str_Groceries]" sap:VirtualizedContainerService.HintSize="70.4,87.2" sap2010:WorkflowViewState.IdRef="FlowSwitch`1_2">
                 <FlowSwitch.Default>
                   <FlowStep x:Name="__ReferenceID1">
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                        <av:Point x:Key="ShapeLocation">0,323.6</av:Point>
+                        <av:Point x:Key="ShapeLocation">0,363.6</av:Point>
                         <av:Size x:Key="ShapeSize">200,52.8</av:Size>
                       </scg:Dictionary>
                     </sap:WorkflowViewStateService.ViewState>
@@ -144,22 +144,19 @@
                     </ui:MessageBox>
                   </FlowStep>
                 </FlowSwitch.Default>
-                <FlowSwitch.Expression>
-                  <VisualBasicValue x:TypeArguments="x:String" ExpressionText="str_Groceries" />
-                </FlowSwitch.Expression>
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                    <av:Point x:Key="ShapeLocation">244.8,276.4</av:Point>
+                    <av:Point x:Key="ShapeLocation">244.8,336.4</av:Point>
                     <av:Size x:Key="ShapeSize">70.4,87.2</av:Size>
-                    <av:PointCollection x:Key="Default">244.8,320 214.80000000000004,320 214.80000000000004,350 200,350</av:PointCollection>
-                    <av:PointCollection x:Key="VegitablesConnector">280,363.59999999999997 280,393.59999999999997 310,393.59999999999997 310,503.59999999999997</av:PointCollection>
-                    <av:PointCollection x:Key="FruitsConnector">315.20000000000005,320 345.20000000000005,320 345.20000000000005,370 470,370</av:PointCollection>
+                    <av:PointCollection x:Key="Default">244.8,380 214.8,380 214.8,390 200,390</av:PointCollection>
+                    <av:PointCollection x:Key="VegitablesConnector">280,423.59999999999997 280,453.59999999999997 300,453.59999999999997 300,463.6</av:PointCollection>
+                    <av:PointCollection x:Key="FruitsConnector">315.20000000000005,380 345.20000000000005,380 345.20000000000005,390 480,390</av:PointCollection>
                   </scg:Dictionary>
                 </sap:WorkflowViewStateService.ViewState>
                 <FlowStep x:Key="Vegitables" x:Name="__ReferenceID2">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                      <av:Point x:Key="ShapeLocation">210,503.59999999999997</av:Point>
+                      <av:Point x:Key="ShapeLocation">200,463.6</av:Point>
                       <av:Size x:Key="ShapeSize">200,52.8</av:Size>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
@@ -174,7 +171,7 @@
                 <FlowStep x:Key="Fruits" x:Name="__ReferenceID3">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                      <av:Point x:Key="ShapeLocation">470,343.6</av:Point>
+                      <av:Point x:Key="ShapeLocation">480,363.6</av:Point>
                       <av:Size x:Key="ShapeSize">200,52.8</av:Size>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
