--- a/SourceCode/2023/Nov2023/Basics/Vineeth/Task 18/Main.xaml
+++ b/SourceCode/2023/Nov2023/Basics/Vineeth/Task 18/Main.xaml
@@ -143,7 +143,7 @@
     <ui:LogMessage DisplayName="Values" sap:VirtualizedContainerService.HintSize="478.4,142.4" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;Multiple values assigned&quot;]" />
     <ui:AddDataRow ArrayRow="{x:Null}" DataRow="[dt_Row]" DataTable="[dt_Built]" DisplayName="Add  Row" sap:VirtualizedContainerService.HintSize="478.4,188" sap2010:WorkflowViewState.IdRef="AddDataRow_1" />
     <ui:LogMessage DisplayName="Data row" sap:VirtualizedContainerService.HintSize="478.4,142.4" sap2010:WorkflowViewState.IdRef="LogMessage_3" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;adding the data row&quot;]" />
-    <ui:OutputDataTable DataTable="[dt_Built]" DisplayName="Output Data Table" sap:VirtualizedContainerService.HintSize="478.4,80.8" sap2010:WorkflowViewState.IdRef="OutputDataTable_1" Text="[dt_Output]" />
+    <ui:OutputDataTable DataTable="[dt_Built]" DisplayName="Output Table" sap:VirtualizedContainerService.HintSize="478.4,80.8" sap2010:WorkflowViewState.IdRef="OutputDataTable_1" Text="[dt_Output]" />
     <ui:LogMessage DisplayName="Output in text" sap:VirtualizedContainerService.HintSize="478.4,142.4" sap2010:WorkflowViewState.IdRef="LogMessage_6" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[dt_Output]" />
     <ui:WriteRange AddHeaders="True" DataTable="[dt_Built]" DisplayName="Write  Workbook" sap:VirtualizedContainerService.HintSize="478.4,116" sap2010:WorkflowViewState.IdRef="WriteRange_1" SheetName="Sheet1" WorkbookPath="Datatable1.xlsx">
       <ui:WriteRange.StartingCell>
